# DocxToHTML

./: .editorconfig  .gitignore  LICENSE  README.md  archivo ejemplos.docx  generate_html.py  main.py  main.spec  pyproject.toml  requirements-dev.txt  requirements.txt
generator_refactor/: README.md  __init__.py  actividad.html  diagnostics.py  docx_reader.py  generator.py  pdf_generator.py  schedule_parser.py  section_parser.py  sesion_sincronica.html  templates.py  templates_v2.py  transformers.py  writer.py
packaging/pyinstaller/: GeneradorHTML.spec
